# ChangeLog for app-arch/upx
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.15 2006/09/09 01:45:07 matsuu Exp $

*upx-2.02 (09 Sep 2006)

  09 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> -upx-1.24-r1.ebuild,
  -upx-1.93.ebuild, +upx-2.02.ebuild:
  Version bumped, bug 145049.
  Removed old versions.

*upx-1.93 (05 Nov 2005)

  05 Nov 2005; MATSUU Takuto <matsuu@gentoo.org> +upx-1.93.ebuild:
  Version bumped. Bug 103833.

  03 Sep 2005; MATSUU Takuto <matsuu@gentoo.org> upx-1.25.ebuild:
  Stable on x86. Bug 103831.

*upx-1.25 (09 Jul 2004)

  09 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> +upx-1.25.ebuild:
  Version bump. bug #56143.

  16 Apr 2004; Michael McCabe <randy@gentoo.org> upx-1.24-r1.ebuild:
  adding s390 keywords

  01 Nov 2003; Brandy Westcott brandy@gentoo.org upx-1.24-r1.ebuild,
  upx-1.24.ebuild:
  Add a block for app-arch/upx-ucl.

*upx-1.24-r1 (25 Mar 2003)

  25 Mar 2003; Seemant Kulleen <seemant@gentoo.org> upx-1.24-r1.ebuild:
  moved binary into /opt, closing bug #17794 by robbat2
  <robbat2@orbis-terrarum.net>

*upx-1.24 (23 Dec 2002)

  01 Jan 2003; Nick Hadaway <raker@gentoo.org> upx-1.24.ebuild :
  Marked stable.

  23 Dec 2002; Nick Hadaway <raker@gentoo.org> upx-1.24.ebuild,
  files/digest-upx-1.24 :
  Version bump.

*upx-1.23-r1 (23 Dec 2002)

  23 Dec 2002; Nick Hadaway <raker@gentoo.org> upx-1.23-r1.ebuild,
  files/digest-upx-1.23-r1 :
  emerge should no longer strip the upx binary.

*upx-1.23 (21 Sep 2002)

  21 Sep 2002; Daniel Robbins <drobbins@gentoo.org> upx-1.23.ebuild: New
  pre-compiled version of upx for better compression and gcc-3.2-compatibility.
  Also moved from app-misc to app-arch.
  
*upx-1.22 (09 Jul 2002)

  09 Jul 2002; Phil Bordelon <sunflare@gentoo.org> upx-1.21.ebuild
  upx-1.22.ebuild : Version bump.  Cleaned up the ebuild a bit; added SLOT and
  KEYWORD to the older ebuild as well.  The new ebuild also does documentation.
