@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/upx-2.02.ebuild,v 1.1 2006/09/09 01:45:07 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/upx-2.02.ebuild,v 1.2 2007/03/20 21:09:47 armin76 Exp $
 
 DESCRIPTION="Ultimate Packer for eXecutables"
 HOMEPAGE="http://upx.sourceforge.net/"
@@ -10,7 +10,7 @@ SRC_URI="x86? ( http://upx.sourceforge.net/download/${P}-i386_linux.tar.gz )
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 IUSE=""
 RESTRICT="nostrip"
 
