@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/upx
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.15 2006/09/09 01:45:07 matsuu Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.16 2007/03/20 21:09:47 armin76 Exp $
+
+  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> upx-2.02.ebuild:
+  x86 stable
 
 *upx-2.02 (09 Sep 2006)
 
